--- a/GitMercuryA/WebContent/css/main.css
+++ b/GitMercuryA/WebContent/css/main.css
@@ -57,7 +57,7 @@ body {
 .column {
     float: left;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+    height: 320px; /* Should be removed. Only for demonstration */
 }
 
 /* Left and right column */
@@ -99,6 +99,29 @@ select{
     box-sizing: border-box;
 }
 
+input[type=date] {
+    padding: 2px 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+
+.eventi {
+  display: grid;
+  grid-template-columns: auto;
+  grid-gap: 10px;
+  padding: 8px;
+  width:100%;
+}
+.eventi>div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: left;
+  padding:20px 15px;
+  font-size: 30px;
+  width:auto;
+}
+
+
 @font-face {
     font-family: 'Fira Sans';
     src: local('FiraSans-Regular'),
@@ -106,8 +129,7 @@ select{
 }
 
 legend {
-    background-color: #000;
-    color: #fff;
+    color: #000000;
     padding: 3px 6px;
 }
 
