--- a/GitMercuryA/WebContent/css/main.css
+++ b/GitMercuryA/WebContent/css/main.css
@@ -47,7 +47,7 @@ body {
 
 /* Style the header */
 .header {
-/* 	background-image: url("Sfondo.jpg"); */
+	background-image: url("Sfondo.jpg");
     padding: 30px;
     text-align: center;
     font-size: 50px;
@@ -57,7 +57,7 @@ body {
 .column {
     float: left;
     padding: 10px;
-    height: 320px; /* Should be removed. Only for demonstration */
+    margin-bottom:0%;
 }
 
 /* Left and right column */
@@ -97,6 +97,7 @@ select{
     border: 1px solid #ccc;
     border-radius: 3px;
     box-sizing: border-box;
+    width: 50%;
 }
 
 input[type=date] {
@@ -131,6 +132,8 @@ input[type=date] {
 legend {
     color: #000000;
     padding: 3px 6px;
+    font-size:x-large;
+    text-align:center;
 }
 
 .output {
@@ -147,8 +150,21 @@ label {
     width: 20%;
 }
 
+input[type=submit] {
+    width: 40%;
+    background-color: #0e4ff8;
+    color: white;
+    padding: 5px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 30%;
+}
 
-
+fieldset{
+	font-size:large;
+}
 
 
 
@@ -177,15 +193,63 @@ label {
 
 /* The Close Button */
 .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
     font-weight: bold;
 }
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
+.close:hover,.close:focus {
+    color: red;
     cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    animation: zoom 0.6s
+}
+@keyframes zoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+}
+
+input[type=text], input[type=password] {
+    width: 90%;
+    padding: 8px 10px;
+    margin: 8px 26px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+	font-size:16px;
+}
+.logBut {
+    background-color: #0e4ff8;
+    color: white;
+    padding: 12px 15px;
+    margin: 4px 18px;
+    border: none;
+    cursor: pointer;
+    width: 10%;
+	font-size:15px;
+	float: right;
+	border-radius:3px;
+}
+
+.formLog {
+    background-color: #0e4ff8;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 26px;
+    border: none;
+    cursor: pointer;
+    width: 90%;
+	font-size:20px;
+	
+}
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+    border-radius:3px;
 }
